--- a/index.html
+++ b/index.html
@@ -5,44 +5,46 @@
     <link href="styles.css" rel='stylesheet'>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li>About</li>
-                <li></li>
-            </ul>
-            <ul>
-                <li>Gmail</li>
-                <li>Images</li>
-                <button>Sign in</button>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <img src="images/google-logo.png" alt="Google Logo"/>
-        <svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-            <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
-        </svg>
-        <form>
-            <input type="text" tabindex="1">
-            <input type="button" placeholder="Google Search">
-            <input type="button" placeholder="I'm Feeling Lucky"> 
-        </form>
-        <p>Google offered in: <a href="#">Français</a></p>
-    </main>
-    <footer>
-        <div>
-            <span>Canada</span>
-            <ul>
-                <li>Advertising</li>
-                <li>Business</li>
-                <li>How Search works</li>
-            </ul>
-            <ul>
-                <li>Privacy</li>
-                <li>Terms</li>
-                <li>Settings</li>
-            </ul>
-        </div>
-    </footer>
+    <div class="page">
+        <header>
+            <nav class="top-menu">
+                <ul class="left-menu">
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Store</a></li>
+                </ul>
+                <ul class="right-menu">
+                    <li><a href="#" style="margin-right:10px;">Sign in</a></li>
+                    <li><a href="#">Images</a></li>
+                    <li><a href="#" >Gmail</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <img src="images/google-logo.png" alt="Google Logo" class="logo"/>
+            <!--<svg class="search-logo" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
+            </svg>-->
+            <form>
+                <input type="text" tabindex="1" class="search">
+                <input type="button" placeholder="Google Search" style="width: auto;">
+                <input type="button" placeholder="I'm Feeling Lucky" style="width: auto;"> 
+            </form>
+            <p>Google offered in: <a href="#">Français</a></p>
+        </main>
+        <footer>
+            <div>
+                <span>Canada</span>
+                <ul>
+                    <li><a href="#">Advertising</a></li>
+                    <li><a href="#">Business</a></li>
+                    <li><a href="#">How Search works</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">Privacy</a></li>
+                    <li><a href="#">Terms</a></li>
+                    <li><a href="#">Settings</a></li>
+                </ul>
+            </div>
+        </footer>
+    </div>
 </body>
