--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                     <li><a href="#">Store</a></li>
                 </ul>
                 <ul class="right-menu">
-                    <li><a href="#" style="margin-right:10px; color:#fff" class="sign-in">Sign in</a></li>
+                    <li><a href="#" style="margin-right:10px; color:#fff; font-weight:normal;" class="sign-in">Sign in</a></li>
                     <li><a href="#">Images</a></li>
                     <li><a href="#" >Gmail</a></li>
                 </ul>
@@ -21,9 +21,7 @@
         </header>
         <main>
             <div class="main">
-                <div style="margin-top: -300px;padding-bottom: 50px;">
                     <img src="images/google-logo.png" alt="Google Logo" class="logo"/>
-                </div>
                 <form class="search-form">
                     <div class="search-bar search-input">
                             <div style="padding-right:13px;">
